finish site for desktop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul class="nav-links">
       <li id="about_link"><a href="#about">About</a></li>
       <li id="features_link"><a href="#features">Features</a></li>
-      <li id="poll_link"><a href="#poll">Poll</a></li>
+      <li id="poll_link"><a href="#subscriptions">Subscriptions</a></li>
     </ul>
     <div class="burger">
       <div class="burger_line"></div>
@@ -34,15 +34,15 @@
           </form>
         </div>
         <div id="home_content_right">
-          <img src="./assets/screenshot3.png" alt="home_image" id="header_img">
-          <img src="./assets/screenshot2.png" alt="home_image" id="header_img">
+          <img src="./assets/login_screenshot-portrait.png" alt="home_image" id="header_img">
+          <img src="./assets/townhall_screenshot-portrait.png" alt="home_image" id="header_img">
         </div>
       </div>
     </section>
+    <div class="section_header">
+      <h2>Why Talo?</h2>
+    </div>
     <section class="about_section" id="about">
-      <div class="section_header">
-        <h2>Why Talo?</h2>
-      </div>
       <div class="section_content" id="about_section_content">
         <div class="about_section_box">
           <img src="./assets/Rectangle9.png" alt="home_image" id="about_image">
@@ -59,18 +59,108 @@
         </div>
       </div>
     </section>
+    <div class="section_header">
+      <h2>What you can do on Talo?</h2>
+    </div>
     <section class="features_section" id="features">
-      <div class="section_header">
-        <h2>What you can do on Talo?</h2>
+      <div class="section_content" id="features_content">
+        <div class="feature_container">
+          <h3>Connect</h3>
+          <img src="./assets/map2_screenshot-portrait.png" alt="feature_image" class="feature_img">
+          <p>Find and engage with others like you through ethnicity specific feeds, a Snapchat like map, and DMs.</p>
+        </div>
+        <div class="feature_container">
+          <h3>Learn</h3>
+          <img src="./assets/task_screenshot_2.png" alt="feature_image" class="feature_img">
+          <p>Complete 1 simple task every morning to consistently learn about your culture.</p>
+        </div>
+        <div class="feature_container">
+          <h3>Smile</h3>
+          <img src="./assets/story_screenshot2-portrait.png" alt="feature_image" class="feature_img">
+          <p>Listen to authentic folktales, myths, and stories of your people through short audio stories. </p>
+        </div>
       </div>
-      <div class="section_content"></div>
     </section>
-    <section class="poll_section" id="poll">
-      <div class="section_header">
-        <h2 style="margin-right: 10px;">Ethnicity Poll</h2>
-        <p style="text-align: center;">Decide what ethnicity should we bring next to the platform</p>
+    <div class="section_header">
+      <h2 style="margin-right: 10px;">Subscription Options</h2>
+    </div>
+    <section class="subscriptions_section" id="subscriptions">
+      <div class="section_content" id="subscriptions_content">
+        <table>
+          <tr style="background-color: #7E58AE">
+            <th style="padding: 20px; text-align: left; border-top-left-radius: 10px;">Features</th>
+            <th style="padding: 20px;">Free</th>
+            <th style="padding: 20px;">Pro</th>
+            <th style="padding: 20px; text-align: left; border-top-right-radius: 10px;">Benefit</th>
+          </tr>
+          <tr>
+            <td class="bold">Daily tasks and reminders</td>
+            <td class="checkbox">✅</td>
+            <td class="checkbox">✅</td>
+            <td>Consistently learn about your culture.</td>
+          </tr>
+          <tr>
+            <td class="bold">Audio stories</td>
+            <td class="checkbox">✅</td>
+            <td class="checkbox">✅</td>
+            <td>Familiarize yourself with common tales and stories of your people.</td>
+          </tr>
+          <tr>
+            <td class="bold">Access to the townhall</td>
+            <td class="checkbox">✅</td>
+            <td class="checkbox">✅</td>
+            <td>Engage with your people and never feel disconnected again.</td>
+          </tr>
+          <tr>
+            <td class="bold">Find and chat with other users</td>
+            <td class="checkbox">✅</td>
+            <td class="checkbox">✅</td>
+            <td>Form priceless connections with others like you in your community.</td>
+          </tr>
+          <tr>
+            <td class="bold">Access to exclusive stories</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Enjoy exclusive access to specials stories for holidays, topics, and even hear your favorite celebrities of your ethnicity tell their favorite stories.</td>
+          </tr>
+          <tr>
+            <td class="bold">Access to additional tasks types</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Want to learn even more, enjoy all new additional types of tasks including fun games, family recipes and more.</td>
+          </tr>
+          <tr>
+            <td class="bold">Ethnicity specific daily facts and holiday notifications</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Keep forgetting those holidays that aren't on a traditional calendar? Stay up to date with common holidays that are part of your culture.</td>
+          </tr>
+          <tr>
+            <td class="bold">Save and view previously learned words and phrases</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Quickly access previously learned materials for studying outside of daily tasks for other personal reasons</td>
+          </tr>
+          <tr>
+            <td class="bold">Make personal advertisements</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Create an ad that will popup everytime someone visits your profile. Share a link to anything like a business site or your twitter!</td>
+          </tr>
+          <tr>
+            <td class="bold">Magic Chat Translation</td>
+            <td class="checkbox">❌</td>
+            <td class="checkbox">✅</td>
+            <td>Translate messages back and forth between English and your ethnicity’s language. See what it would be like to speak in the native tongue</td>
+          </tr>
+          <tr>
+            <td class="bold" style="border-bottom-left-radius: 10px;">Price</td>
+            <td style="text-align: center;">Free</td>
+            <td class="bold" style="border-bottom-right-radius: 10px;">$4.99/mth</td>
+            <td></td>
+          </tr>
+        </table>
       </div>
-      <div class="section_content"></div>
     </section>
   </main>
   <script src="./index.js"></script>
