fix features alignment, add beta note

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             <td></td>
           </tr>
         </table>
+        <small>* Beta users will get access to all features</small>
       </div>
     </section>
     <footer>
